# school_converter

./: .gitignore  BUILD_INSTRUCTIONS.md  GUI_README.md  README.md  README_GOOGLE_DOCS.md  REFACTORING_SUMMARY.md  SchoologyConverter.spec  build_gui.py  cc_converter.spec  cli.spec  macos_install.sh  main.py  pyproject.toml  requirements-google-docs.txt  requirements.txt  retrieve_google_form.py  run_gui.py  run_gui.spec  sample1.imscc  school_convert.spec  setup.py  test_image_handling.py
.github/workflows/: build-gui.yml
cc_converter/: __init__.py  __main__.py  cli.py  docx_converter.py  enhanced_converter.py  file_handler.html  google_docs_converter.py  google_forms_api.py  google_forms_converter.py  gui.py  hierarchy_converter.py  hierarchy_extractor.py  models.py  parser.py  retrieve_form.py  template.docx  xml_parser.py
cc_converter/templates/: site_viewer.html
tests/: test_sample.py
