[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cc_converter"]

[project]
name = "cc_converter"
description = "Schoology Format Converter"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-docx>=0.8.11",
    "pywebview>=4.0",
    "watchdog>=3.0.0",
    "requests>=2.25.0",
]

[project.scripts]
cc-convert = "cc_converter.cli:main"
cc-gui = "cc_converter.gui:main"
